# disorganiser

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  application.cpp  application.h  backup_media.sh  deploy.sh  deploymini.sh  font.cpp  ideas.md  install-dependancies-debian.sh  install-dependancies-fedora.sh  mac-deploy.sh  main.cpp  rpi.sh  run.sh  sdl.cpp  sdl.h  texture.cpp  texture.h  threepio-deploy.sh  threepiodeploy.sh  timer.cpp  timer.h  vimes-deploy.sh
lua/: CMakeLists.txt
lua/lua-5.4.4/: README
scripts/: .gitignore  .luarc.json  .stylua.toml  alive.sh  animation.lua  autocomplete.lua  calendar.lua  class.lua  clock.lua  clockchimes.lua  confirmdialog.lua  console.lua  docker.lua  eventhandlers.lua  eventnames.lua  events.lua  experiments.lua  garbage.lua  history.lua  imap4.lua  init.lua  ledtouch.lua  lem.lua  main.lua  main2.lua  makebutton.lua  minimenu.lua  misc.lua  packatlas.lua  ping.lua  quatro.lua  quit.lua  run.lua  screensaver.lua  sshtasktest.lua  suspend.lua  systemupdate.lua  tailtest.lua  tasks.lua  testtask.lua  (+6 more)
scripts/definitions/: library.lua
scripts/gui/: button.lua  gui.lua  hovertext.lua  inputgroup.lua  screen.lua  widget.lua
scripts/lemmings/: frames.lua  genatlas.lua
src/: application.cpp  application.h  atlas.cpp  atlas.h  edit_string.cpp  edit_string.h  font.cpp  font.h  line_list.cpp  line_list.h  main.cpp  non_blocking_process.cpp  non_blocking_process.h  non_blocking_process_read.cpp  non_blocking_process_read.h  rectangle.cpp  rectangle.h  renderlist.h  rounded_rectangle.cpp  rounded_rectangle.h  script_manager.cpp  script_manager.h  sdl.cpp  sdl.h  soundclip.cpp  soundclip.h  telnet_console.cpp  telnet_console.h  texture.cpp  texture.h  timer.cpp  timer.h  utf8.cpp  utf8.h
src/bindings/: bindings.cpp  bindings.h  lb_application.h  lb_atlas.h  lb_color.h  lb_edit_string.h  lb_font.h  lb_line_list.h  lb_nb_process_reader.h  lb_nb_subprocess.h  lb_rectangle.h  lb_renderer.h  lb_renderlist.h  lb_rounded_rectangle.h  lb_soundclip.h  lb_texture.h
